# internal/adapter/inbound/http/docs/swagger.yaml
@@ -13,21 +13,6 @@ definitions:
       updated_at:
         type: string
     type: object
-  dto.ListTodo:
-    properties:
-      created_at:
-        type: string
-      description:
-        type: string
-      done:
-        type: boolean
-      id:
-        type: string
-      title:
-        type: string
-      updated_at:
-        type: string
-    type: object
   dto.ReqCreateNote:
     properties:
       content:
@@ -36,18 +21,6 @@ definitions:
         type: string
     required:
     - content
-    - title
-    type: object
-  dto.ReqCreateTodo:
-    properties:
-      description:
-        type: string
-      done:
-        type: boolean
-      title:
-        type: string
-    required:
-    - description
     - title
     type: object
   dto.ReqUpdateNote:
@@ -60,24 +33,7 @@ definitions:
     - content
     - title
     type: object
-  dto.ReqUpdateTodo:
-    properties:
-      description:
-        type: string
-      done:
-        type: boolean
-      title:
-        type: string
-    required:
-    - description
-    - title
-    type: object
   dto.ResCreateNote:
-    properties:
-      id:
-        type: string
-    type: object
-  dto.ResCreateTodo:
     properties:
       id:
         type: string
@@ -88,21 +44,6 @@ definitions:
         type: string
       created_at:
         type: string
-      id:
-        type: string
-      title:
-        type: string
-      updated_at:
-        type: string
-    type: object
-  dto.ResGetTodoByID:
-    properties:
-      created_at:
-        type: string
-      description:
-        type: string
-      done:
-        type: boolean
       id:
         type: string
       title:
@@ -374,206 +315,6 @@ paths:
       summary: Update Note
       tags:
       - Notes
-  /todos:
-    get:
-      consumes:
-      - application/json
-      description: Retrieves a list of todos with optional filtering and pagination
-      parameters:
-      - in: query
-        name: count_total_data
-        type: boolean
-      - in: query
-        name: cursor
-        type: string
-      - description: Optional filter for done status
-        in: query
-        name: is_done
-        type: boolean
-      - in: query
-        name: page
-        type: integer
-      - enum:
-        - offset
-        - cursor
-        in: query
-        name: pagination_type
-        required: true
-        type: string
-      - in: query
-        name: per_page
-        type: integer
-      - in: query
-        maxLength: 100
-        name: search
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Todos retrieved successfully
-          schema:
-            allOf:
-            - $ref: '#/definitions/response.ResponseSuccess'
-            - properties:
-                data:
-                  items:
-                    $ref: '#/definitions/dto.ListTodo'
-                  type: array
-              type: object
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.ResponseFailed'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.ResponseFailed'
-      summary: List Todos
-      tags:
-      - Todos
-    post:
-      consumes:
-      - application/json
-      description: Creates a new todo
-      parameters:
-      - description: Todo data
-        in: body
-        name: todo
-        required: true
-        schema:
-          $ref: '#/definitions/dto.ReqCreateTodo'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Todo created successfully
-          schema:
-            allOf:
-            - $ref: '#/definitions/response.ResponseSuccess'
-            - properties:
-                data:
-                  $ref: '#/definitions/dto.ResCreateTodo'
-              type: object
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.ResponseFailed'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.ResponseFailed'
-      summary: Create Todo
-      tags:
-      - Todos
-  /todos/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: Deletes a todo by ID
-      parameters:
-      - description: Todo ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Todo deleted successfully
-          schema:
-            $ref: '#/definitions/response.ResponseSuccess'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.ResponseFailed'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/response.ResponseFailed'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.ResponseFailed'
-      summary: Delete Todo
-      tags:
-      - Todos
-    get:
-      consumes:
-      - application/json
-      description: Retrieves a todo by its id
-      parameters:
-      - description: Todo ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Todo retrieved successfully
-          schema:
-            allOf:
-            - $ref: '#/definitions/response.ResponseSuccess'
-            - properties:
-                data:
-                  $ref: '#/definitions/dto.ResGetTodoByID'
-              type: object
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.ResponseFailed'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/response.ResponseFailed'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.ResponseFailed'
-      summary: Get Todo by ID
-      tags:
-      - Todos
-    put:
-      consumes:
-      - application/json
-      description: Updates an existing todo by ID
-      parameters:
-      - description: Todo ID
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: Todo data
-        in: body
-        name: todo
-        required: true
-        schema:
-          $ref: '#/definitions/dto.ReqUpdateTodo'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Todo updated successfully
-          schema:
-            $ref: '#/definitions/response.ResponseSuccess'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.ResponseFailed'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/response.ResponseFailed'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.ResponseFailed'
-      summary: Update Todo
-      tags:
-      - Todos
 securityDefinitions:
   BasicAuth:
     type: basic
